--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.page{
+  height:100%;width:100%;background-color: #d9afd9;
+background-image: linear-gradient(0deg,#d9afd9 0%,#97d9e1 100%);
+}
 a {
   font-weight: 500;
   color: #646cff;
